grafana plugin to join group by and fill
